--- a/ayotte_willson_project1/index.html
+++ b/ayotte_willson_project1/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<!-- Class: VFW Week 1 Project
-Name:  Willson Ayotte
-Term:  1208 -->
+<!-- Name:  Willson Ayotte -->
+<!-- MIU 1209 -->
+<!-- Application for tracking apartments that are vacant. -->
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="Branding page, to add apartments to be maintenanced." />
-		<meta name="robots" content="index, follow" />
-		<meta name="viewport" content="user-scalable=no, width=device-width" />
-		<meta name="viewport" content="target-densitydpi=device-dpi" />
-		<meta name="HandheldFriendly" content="True" />
-		<meta name="MobileOptimized" content="320" />
-		<title>Apartment Tracker</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta charset="utf-8" /> <!-- type of charset -->
+		<meta name="description" content="Branding page, to add apartments to be maintenanced." /> <!-- A description of what this application is about. -->
+		<meta name="robots" content="index, follow" /> <!-- Allowed for search engines to find content on page. -->
+		<meta name="viewport" content="user-scalable=no, width=device-width" /> <!-- For iPhone viewing -->
+		<meta name="viewport" content="target-densitydpi=device-dpi" /> <!-- For android phones. -->
+		<meta name="HandheldFriendly" content="True" /> <!-- For older phones that are not so smart. -->
+		<meta name="MobileOptimized" content="320" /> <!-- For older phones that are not so smart. -->
+		<title>Apartment Tracker</title> <!-- title of page, shows in a tab or head of browser -->
+		<link rel="stylesheet" type="text/css" href="css/style.css"> <!-- Importing the style sheet -->
 	</head>
 	<body>
-		<h1>Apartment Tracker</h1>
-		<p>An app that keeps track of apartments that need to be maintenanced in order to rent.</p>
-		<h2>Get To Tracking</h2>
-		<a href="additem.html">Add an Apartment</a>
+		<header>
+			<h1>Apartment Tracker</h1>
+		<div class="container" id="container">
+			<img class="image" src="img/maint.png" id="maint"/>
+			<p id="p1">What needs<br />fixing?<p>
+			<form style="display: inline" action="additem.html" method="get">
+  			<button id="link1">Add an Apartment</button>
+			</form>
+			<form name="search" id="search" action="#" method="post">
+				<input type="text" placeholder="Search" class="search"/>
+				<input type="button" value="Submit" id="search"/>
+			</form>
+		</div>
+		</header>
+		<div class="browseApartments">
+		<h2>Browse Apartment Type</h2>
+			<ul>
+				<button href="#" id="link2">Vacant Available</button>
+				<button href="#" id="link3">Vacant Rented</button>
+				<button href="#" id="link4">Notice Available</button>
+			</ul>
+		</div>
 	</body>
 </html>
