Final Submission for Week 1 MIU Class

--- a/ayotte_willson_project1/index.html
+++ b/ayotte_willson_project1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- Name:  Willson Ayotte -->
+<!-- Date: Aug 30th 2012 -->
 <!-- MIU 1209 -->
 <!-- Application for tracking apartments that are vacant. -->
 <html>
@@ -19,13 +20,13 @@
 			<h1>Apartment Tracker</h1>
 		<div class="container" id="container">
 			<img class="image" src="img/maint.png" id="maint"/>
-			<p id="p1">What needs<br />fixing?<p>
+			<p id="p1">What needs fixing?<p>
 			<form style="display: inline" action="additem.html" method="get">
-  			<button id="link1">Add an Apartment</button>
+  			<button id="addApt">Add an Apartment</button>
 			</form>
-			<form name="search" id="search" action="#" method="post">
-				<input type="text" placeholder="Search" class="search"/>
-				<input type="button" value="Submit" id="search"/>
+			<form name="search" id="searchBtn" action="#" method="post">
+				<input type="text" placeholder="Search" class="search" id="searchBox"/>
+				<input type="button" value="Search" id="searchBtn"/>
 			</form>
 		</div>
 		</header>
