--- a/ayotte_willson_project1/additem.html
+++ b/ayotte_willson_project1/additem.html
@@ -15,7 +15,7 @@ Term:  1208
 		<meta name="HandheldFriendly" content="True" /><!-- optd for other phones -->
 		<meta name="MobileOptimized" content="320" /><!-- opted for other phones -->
 		<title>Add/Edit Apartments</title><!-- title of page, shows in a tab or head of browser -->
-		<link rel="stylesheet" type="text/css" href="css/style.css" /><!-- Importing the style sheet -->
+		<link rel="stylesheet" type="text/css" href="css/style.css"><!-- Importing the style sheet -->
 	</head>
 	<body>
 		<h1>Add Vacant Aparments</h1><!-- header title of html page -->
@@ -42,7 +42,7 @@ Term:  1208
 				</ul>
 			</fieldset><!-- end of apartment info field -->
 		</form>
-		<input type="submit" value="Submit Apartment" id="submit" /><br /><br /><!-- submit button to submit the data into the database. I would like to add onClick="document.location.reload()" to this button but my validation will not work.-->
+		<input type="submit" value="Submit Apartment" id="submit" /><br /><br /><!-- submit button to submit the data into the database -->
 			<nav>
 				<ul>
 					<li><a href="#" id="displayLink">Display Apartments</a></li><!-- links to clear stored data and to display data in database -->
