--- a/ayotte_willson_project2/bronze/index.html
+++ b/ayotte_willson_project2/bronze/index.html
@@ -1,4 +1,4 @@
-<!doctype html>  
+<!doctype html>  <!-- BRONZE -->
 <html lang="en">
 <head>
 
@@ -64,7 +64,7 @@
 				<ul>
 					<li><a href="#bronze">Home</a></li>
 					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#aboutb">About</a></li>
 				</ul>
 			</div>
@@ -95,7 +95,7 @@
 				<ul>
 					<li><a href="#bronze">Home</a></li>
 					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#aboutb">About</a></li>
 				</ul>
 			</div>
@@ -158,7 +158,7 @@
 				<ul>
 					<li><a href="#bronze">Home</a></li>
 					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#aboutb">About</a></li>
 				</ul>
 			</div>
@@ -209,7 +209,7 @@
 				<ul>
 					<li><a href="#bronze">Home</a></li>
 					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#aboutb">About</a></li>
 				</ul>
 			</div>
@@ -259,36 +259,13 @@
 				<ul>
 					<li><a href="#bronze">Home</a></li>
 					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#aboutb">About</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 
-<!-- NewsFeed Page -->
-	<div data-role="page" id="newsb" data-add-back-btn="true">
-
-		<div data-role="header" data-position="fixed">
-			<h1>News Feed</h1>
-		</div>
-
-		<div data-role="content">
-			<p>This page is for the NewsFeed</p>
-		</div>
-
-		<div data-role="footer" data-position="fixed">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#gold">Home</a></li>
-					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
-					<li><a href="#aboutb">About</a></li>
-				</ul>
-			</div>
-		</div>
-
-	</div>
 
 <!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
