--- a/ayotte_willson_project2/gold/index.html
+++ b/ayotte_willson_project2/gold/index.html
@@ -63,7 +63,7 @@
 				<ul>
 					<li><a href="#gold">Home</a></li>
 					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#abouta">About</a></li>
 				</ul>
 			</div>
@@ -102,7 +102,7 @@
 				<ul>
 					<li><a href="#gold">Home</a></li>
 					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#abouta">About</a></li>
 				</ul>
 			</div>
@@ -141,7 +141,7 @@
 				<ul>
 					<li><a href="#gold">Home</a></li>
 					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#abouta">About</a></li>
 				</ul>
 			</div>
@@ -179,7 +179,7 @@
 				<ul>
 					<li><a href="#gold">Home</a></li>
 					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#abouta">About</a></li>
 				</ul>
 			</div>
@@ -203,7 +203,7 @@
 				<!-- NOTE: After clicking App A or App B from the About Page you must refresh when at the home screen or the footer buttons will not work. Need to add auto refresh when those buttons are clicked. -->
 				<li data-role="list-divider">App A and App B</li>
 				<li><a href="#gold">App A</a></li>
-				<li><a href="bronze/bronze.html">App B</a></li>
+				<li><a href="bronze.html">App B</a></li>
 				
 				<li data-role="list-divider">Git Link Master</li>
 				<li>https://github.com/Ezcaflowne/MIU</li>
@@ -225,7 +225,7 @@
 				<ul>
 					<li><a href="#gold">Home</a></li>
 					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#abouta">About</a></li>
 				</ul>
 			</div>
@@ -280,39 +280,13 @@
 				<ul>
 					<li><a href="#gold">Home</a></li>
 					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#abouta">About</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 
-<!-- NewsFeed Page -->
-	<div data-role="page" id="newsa">
-
-		<div data-role="header" data-position="fixed">
-			<h1>News Feed</h1>
-			
-		</div>
-
-		<div data-role="content">
-			
-
-
-		</div>
-
-		<div data-role="footer" data-position="fixed">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#gold">Home</a></li>
-					<li><a href="#supera">Super</a></li>
-					<li><a href="#newsa">News</a></li>
-					<li><a href="#abouta">About</a></li>
-				</ul>
-			</div>
-		</div>
-
-	</div>
 
 <!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
