--- a/ayotte_willson_project2/gold/index.html
+++ b/ayotte_willson_project2/gold/index.html
@@ -1,4 +1,4 @@
-<!doctype html>  
+<!doctype html>  <!-- GOLD -->
 <html lang="en">
 <head>
 
@@ -201,9 +201,9 @@
 
 			<ul data-role="listview" data-inset="true">
 				<!-- NOTE: After clicking App A or App B from the About Page you must refresh when at the home screen or the footer buttons will not work. Need to add auto refresh when those buttons are clicked. -->
-				<li data-role="list-divider">App A and App B</li>
-				<li><a href="#gold">App A</a></li>
-				<li><a href="bronze.html">App B</a></li>
+				<li data-role="list-divider">Link to Apps</li>
+				<li><a href="#gold">Gold</a></li>
+				<li><a href="http://ezcaflowne.github.com/MIU/ayotte_willson_project2/bronze/">Bronze</a></li>
 				
 				<li data-role="list-divider">Git Link Master</li>
 				<li>https://github.com/Ezcaflowne/MIU</li>
