Added new main.js for gold app

--- a/ayotte_willson_project3/bronze/index.html
+++ b/ayotte_willson_project3/bronze/index.html
@@ -34,19 +34,19 @@
 		</div>
 
 		<div data-role="content">
-			<h1 id="headline">Apartment Tracker</h1>
 			<center>
+			<h1 id="headline">Apartment Tracker</h1>
 			<img src="img/apartment.png" />
 			</center>
-			<p><a href="additem.html" data-role="button" data-icon="arrow-r" data-iconpos="right">Add Apartment</a></p>
+			<p><a href="additem.html" data-role="button" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Add Apartment</a></p>
 
 			<ul data-role="listview" data-inset="true" data-filter="true">
 				<li data-role="list-divider">Browse by Apartment</li>
 				<li>
 				<div class="ui-grid-b">
-				<div class="ui-block-a"><img src="img/Vacant Available.png"><a href="#vab">Vacant Available</a></div>
-				<div class="ui-block-b"><img src="img/Vacant Rented.png"><a href="#vrb">Vacant Rented</a></div>
-				<div class="ui-block-c"><img src="img/Notice Available.png"><a href="#nab">Notice Available</a></div>
+				<div class="ui-block-a"><img src="img/Vacant Available.png"><br/><a href="#vab">Vacant<br/>Available</a></div>
+				<div class="ui-block-b"><img src="img/Vacant Rented.png"><br/><a href="#vrb">Vacant<br/>Rented</a></div>
+				<div class="ui-block-c"><img src="img/Notice Available.png"><br/><a href="#nab">Notice<br/>Available</a></div>
 				</div><!-- /grid-b -->
 				</li>
 			</ul>
@@ -125,7 +125,7 @@
 				<ul>
 					<li><a href="index.html" data-ajax="false">Home</a></li>
 					<li><a href="#superb">Super</a></li>
-					<li><a href="#newsb">News</a></li>
+					<li><a href="http://feeds.weatherbug.com/rss.aspx?zipcode=89142&feed=currtxt,fcsttxt&zcode=z4641">News</a></li>
 					<li><a href="#aboutb">About</a></li>
 				</ul>
 			</div>
@@ -180,7 +180,7 @@
 			<ul data-role="listview" data-inset="true">
 				<!-- NOTE: After clicking App A or App B from the About Page you must refresh when at the home screen or the footer buttons will not work. Need to add auto refresh when those buttons are clicked. -->
 				<li data-role="list-divider">Link to Apps</li>
-				<li><a href="http://ezcaflowne.github.com/MIU/ayotte_willson_project2/gold/">Gold</a></li>
+				<li><a href="http://ezcaflowne.github.com/MIU/ayotte_willson_project3/gold/">Gold</a></li>
 				<li><a href="index.html" data-ajax="false">Bronze</a></li>
 				
 				<li data-role="list-divider">Git Link Master</li>
