Fixed validator for iOS Sim

--- a/ayotte_willson_project3/gold/index.html
+++ b/ayotte_willson_project3/gold/index.html
@@ -302,24 +302,23 @@
 
                       <div data-role="fieldcontain" class="formfield">
                       	<h5>*required fields*</h5>
-                      	<span class="errormsg" id="errors"></span>
                 	    <label for="aptType" class="select">*Type:</label>
                 	    <select name="aptType" id="aptType">
                           <option data-placeholder="true">--Apartment Type--</option>
-                	      <option value="">Vacant Available</option>
-                	      <option value="">Vacant Rented</option>
-                	      <option value="">Notice Available</option>
+                	      <option value="Vacant Available">Vacant Available</option>
+                	      <option value="Vacant Rented">Vacant Rented</option>
+                	      <option value="Notice Available">Notice Available</option>
               	        </select>
               	      </div>
                       
                       <div data-role="fieldcontain" class="formfield">
                       	<label for="aptNum">*Number: </label>
-                      	<input type="text" name="aptNum" id="aptNum" value="" placeholder="Enter Apartment Number" class="required number" class="foo"/>
+                      	<input type="text" name="aptNum" id="aptNum" value="" placeholder="Enter Apartment Number" class="required number"/>
                       </div>
 
                        <div data-role="fieldcontain" class="formfield">
                       	<label for="aptSize">*Size: </label>
-                      	<input type="text" name="aptSize" id="aptSize" value="" placeholder="bedxbath" class="required" class="foo"/>
+                      	<input type="text" name="aptSize" id="aptSize" value="" placeholder="bedxbath" class="required"/>
                       </div>
 
                       <div data-role="fieldcontain">
